<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MesaDeBar</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="labelPessoas">Pessoas</string>
    <string name="lebelMesa">Mesa</string>
    <string name="labelPedidos">Pedidos</string>
    <string name="title_activity_adicionar_pessoa">AdicionarPessoaActivity</string>
    <string name="title_activity_adicionar_pedido">AdicionarPedidoActivity</string>
    <string name="buttonGravar">Gravar</string>
    <string name="buttonCancelar">Cancelar</string>
    <string name="labelNome">Nome:</string>
    <string name="labelItem">Item:</string>
    <string name="labelQuantidade">Quantidade:</string>
    <string name="labelValorUnitario">Valor unitário</string>
    <string name="title_activity_resultado_divisao">ResultadoDivisaoActivity</string>
    <string name="action_settings">Settings</string>
    <string name="labelDivisaoConta">Divisão da Conta</string>

</resources>