<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/linearLayoutMesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lebelMesa" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/linearLayoutPessoas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayoutMesa"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageViewAddPessoas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/textViewPessoas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageViewAddPessoas"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/labelPessoas" />

        <ListView
            android:id="@+id/listViewPessoas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/imageViewAddPessoas" >

        </ListView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/LinearLayoutPedidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayoutPessoas"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextViewPedidos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelPedidos" />

        <ListView
            android:id="@+id/listViewPedidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ImageViewAddPedidos" >

        </ListView>

        <ImageView
            android:id="@+id/ImageViewAddPedidos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_launcher" />
    </RelativeLayout>

</RelativeLayout>
